# youtube-chat-downloader

./: .env  CLAUDE.md  DATABASE_UPGRADE_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_EXAMPLES.md  main.py  pyproject.toml  ytchat.bat  ytchat.sh
.claude/: settings.local.json
docs/: EMOJI_HANDLING.md  EMOJI_QUICK_REFERENCE.md
examples/: emoji_usage.py  example_usage.py
scripts/: inspect_message_structure.py  migrate_add_emotes.py  migrate_add_video_details.py  test_channel.py  test_emoji_storage.py
src/youtube_chat_downloader/: init.py  main.py
src/youtube_chat_downloader/cli/: commands.py
src/youtube_chat_downloader/core/: analyzer.py  downloader.py
src/youtube_chat_downloader/database/: connection.py  models.py
src/youtube_chat_downloader/utils/: emoji_handler.py  logger.py
